--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,12 @@ langchain-community==0.3.20
 langchain-openai==0.3.9
 
 pydantic==2.11.5
+
+# posture analysis dependencies
+opencv-python-headless
+mediapipe
+numpy
+pillow
+
+# safety for langchain/openai retry logic
+tenacity
