--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,12 @@ python-dotenv==1.0.1
 
 openai==1.63.0
 
-langchain==0.3.21
-langchain-core==0.3.46
-langchain-community==0.3.20
-langchain-openai==0.3.9
+# 안정적인 LangChain 버전 (Cloud용)
+langchain==0.3.3
+langchain-core==0.3.10
+langchain-community==0.3.2
+langchain-openai==0.1.3
 
-pydantic==2.11.5
+pydantic==2.7.4
 
-# posture analysis dependencies
-opencv-python-headless
-mediapipe
-numpy
-pillow
-
-# safety for langchain/openai retry logic
-tenacity
+tenacity==8.2.2
