--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
-streamlit==1.32.2
-python-dotenv==1.0.1
+streamlit>=1.32.0
+python-dotenv
 
-openai==1.63.0
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-openai>=0.1.0
 
-# 안정적인 LangChain 버전 (Cloud용)
-langchain==0.3.3
-langchain-core==0.3.10
-langchain-community==0.3.2
-langchain-openai==0.1.3
-
-pydantic==2.7.4
-
-tenacity==8.2.2
+openai>=1.30.0
+tiktoken
